--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -1,4 +1,5 @@
-@import 'node_modules/ember-frost-css-core/scss/frost-core';
+@import 'frost-theme';
+@import 'frost-core';
 
 // Everything larger than portrait phone
 @mixin phone-portrait-and-up {
@@ -21,6 +22,38 @@
   display: flex;
   flex-direction: row;
   margin-left: 20px;
+}
+
+.section {
+  float: left;
+  padding-right: 30px;
+
+  > .title {
+    font-size: $frost-font-xl;
+    padding-bottom: 20px;
+  }
+
+  .example {
+    padding-bottom: 10px;
+
+    > .title {
+      font-size: $frost-font-l;
+      padding-bottom: 10px;
+    }
+
+    .snippet {
+      display: inline-block;
+      font-size: $frost-font-s;
+      margin-right: 20px;
+      margin-top: -15px;
+      vertical-align: top;
+    }
+
+    .demo {
+      display: inline-block;
+      vertical-align: top;
+    }
+  }
 }
 
 .dummy-content {
