update demo page with latest specs

--- a/addon/styles/addon.scss
+++ b/addon/styles/addon.scss
@@ -10,15 +10,12 @@ $frost-color-link-focus-box-shadow: 0 1px 6px rgba(0,158,239, 0.75);
 .frost-link {
   display: inline-block;
   text-align: center;
-  border: none;
   border-radius: 2px;
   text-decoration: none;
   cursor: pointer;
   user-select: none;
 
    &.disabled {
-    opacity: 0.25;
-    box-shadow: none !important;
     border: none;
     cursor: default;
 
@@ -38,6 +35,7 @@ $frost-color-link-focus-box-shadow: 0 1px 6px rgba(0,158,239, 0.75);
 
   // Function based coloring
   &.primary {
+    border: none;
     background: linear-gradient(lighten($frost-color-blue-1, 14), $frost-color-blue-1);
     color: $frost-color-white;
 
@@ -53,9 +51,6 @@ $frost-color-link-focus-box-shadow: 0 1px 6px rgba(0,158,239, 0.75);
 
     &:active {
       box-shadow:none;
-    }
-
-    &.is-pressed {
       background: $frost-color-link-primary-pressed-bg;
       .content {
         opacity: 0.5;
@@ -63,6 +58,9 @@ $frost-color-link-focus-box-shadow: 0 1px 6px rgba(0,158,239, 0.75);
     }
 
     &.disabled {
+      box-shadow: none;
+      opacity: 0.25;
+
       &:hover {
         background: linear-gradient(lighten($frost-color-blue-1, 14), $frost-color-blue-1);
       }
@@ -80,25 +78,25 @@ $frost-color-link-focus-box-shadow: 0 1px 6px rgba(0,158,239, 0.75);
     &:hover {
       background-color:rgba($frost-color-blue-1, 0.05);
       box-shadow: none;
-    }
 
-    &:focus {
-      outline:0;
-      box-shadow: $frost-color-link-focus-box-shadow;
-    }
-
-    &:active {
-      box-shadow: none;
-    }
-
-    .is-focused {
       .text{
         border-bottom-width: 1px;
         border-bottom-style: solid;
       }
     }
 
-    &.is-pressed {
+    &:focus {
+      outline:0;
+      box-shadow: $frost-color-link-focus-box-shadow;
+
+      .text{
+        border-bottom-width: 1px;
+        border-bottom-style: solid;
+      }
+    }
+
+    &:active {
+      box-shadow: none;
       background: $frost-color-link-secondary-pressed-bg;
       .content {
         opacity: 0.5;
@@ -106,6 +104,9 @@ $frost-color-link-focus-box-shadow: 0 1px 6px rgba(0,158,239, 0.75);
     }
 
     &.disabled {
+      box-shadow: none;
+      opacity: 0.25;
+
       &:hover {
         background: none;
       }
@@ -132,9 +133,6 @@ $frost-color-link-focus-box-shadow: 0 1px 6px rgba(0,158,239, 0.75);
 
     &:active {
       box-shadow: none;
-    }
-
-    &.is-pressed {
       .content {
         color: $frost-color-blue-2;
       }
@@ -143,9 +141,9 @@ $frost-color-link-focus-box-shadow: 0 1px 6px rgba(0,158,239, 0.75);
     &.disabled {
       opacity: 0.3;
       background: none;
+      box-shadow: none;
     }
   }
-
 
   // Sizes
   &.large {
