--- a/addon/templates/components/frost-link.hbs
+++ b/addon/templates/components/frost-link.hbs
@@ -5,13 +5,7 @@
     </div>
 {{/if}}
 
-{{#if (eq priority 'secondary')}}
-    <div class='content {{if (or isFocused isHovered) 'is-focused'}}'>
-      {{yield}}
-    </div>
-{{/if}}
-
-{{#if (eq priority 'tertiary')}}
+{{#if (or priority 'secondary' 'tertiary')}}
     <div class='content'>
       {{yield}}
     </div>
