--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -19,14 +19,29 @@
 }
 
 .dummy-body {
-  display: flex;
-  flex-direction: row;
-  margin-left: 20px;
+  padding: 0 20px;
 }
 
+pre {
+  margin: 0;
+}
+
+.dummy-body.link {
+  .example .snippet {
+    width: 305px;
+    margin: 5px 0 10px 0;
+  }
+}
+
+.section-title {
+  font-size: $frost-font-xl;
+  margin-bottom: 15px;
+}
 .section {
-  float: left;
-  padding-right: 30px;
+  display: flex;
+  flex-direction: row;
+  flex-flow: wrap;
+  width: calc(100vw - 250px);
 
   > .title {
     font-size: $frost-font-xl;
@@ -34,29 +49,27 @@
   }
 
   .example {
+    padding-right: 50px;
     padding-bottom: 10px;
 
     > .title {
       font-size: $frost-font-l;
-      padding-bottom: 10px;
+      padding-bottom: 5px;
     }
 
     .snippet {
       display: inline-block;
       font-size: $frost-font-s;
       margin-right: 20px;
-      margin-top: -15px;
+      margin-top: -5px;
       vertical-align: top;
     }
 
     .demo {
-      display: inline-block;
+      display: block;
       vertical-align: top;
     }
   }
 }
 
-.dummy-content {
-  flex: 1;
-}
 
