--- a/addon/templates/components/frost-link.hbs
+++ b/addon/templates/components/frost-link.hbs
@@ -5,7 +5,13 @@
     </div>
 {{/if}}
 
-{{#if (or priority 'secondary' 'tertiary')}}
+{{#if (eq priority 'secondary')}}
+    <div class='content'>
+      {{yield}}
+    </div>
+{{/if}}
+
+{{#if (eq priority 'tertiary')}}
     <div class='content'>
       {{yield}}
     </div>
